add message functionality

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Homies</title>
+    <style>
+    md-dialog {
+      /* max-width : 95% !important;   */
+      max-height : 100% !important;
+    }
+    </style>
   </head>
   <body>
     <noscript>
