--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <style>
     md-dialog {
       /* max-width : 95% !important;   */
-      max-height : 100% !important;
+      max-height : 300px !important;
     }
     </style>
   </head>
