--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -22,12 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Homies</title>
-    <style>
-    md-dialog {
-      /* max-width : 95% !important;   */
-      max-height : 300px !important;
-    }
-    </style>
+
   </head>
   <body>
     <noscript>
